save state update module sms

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -1067,20 +1067,22 @@
 
 <div class="cd-print-detali">
     <div class="container-fluid">
-        <!-- Что распечатать находится внутри  .to_print -->
-        <div class='to_print'>
-            <hr>
-            <h2>Печать чека:</h2>
-            <table>
-                <tr><td>Название</td><td>Стоимость</td><td>Дата</td><td>Количество</td></tr>
-                <tr><td>Кока кола</td><td>67 руб.</td><td>12.02.2015</td><td>1 шт.</td></tr>
-                <tr><td>Сок Добрый</td><td>70 руб.</td><td>12.02.2015</td><td>1 шт.</td></tr>
-                <tr><td>Хлеб пшеничный</td><td>23 руб.</td><td>12.02.2015</td><td>2 шт.</td></tr>
-            </table>
-            <hr>
-        </div>
-        Не печатаемая область - какой-то текст или блоки сайта<br>
-        Нажмите <button class="myprint">Печать</button> чтобы напечатать
+        <form class="cd-form bg-white">
+            <!-- Что распечатать находится внутри  .to_print -->
+            <div class='to_print'>
+                <hr>
+                <h1>натурная ведомость поезда</h1>
+                <table>
+                    <tr><td>Название</td><td>Стоимость</td><td>Дата</td><td>Количество</td></tr>
+                    <tr><td>Кока кола</td><td>67 руб.</td><td>12.02.2015</td><td>1 шт.</td></tr>
+                    <tr><td>Сок Добрый</td><td>70 руб.</td><td>12.02.2015</td><td>1 шт.</td></tr>
+                    <tr><td>Хлеб пшеничный</td><td>23 руб.</td><td>12.02.2015</td><td>2 шт.</td></tr>
+                </table>
+                <hr>
+            </div>
+            <br>
+            Нажмите <button class="myprint">Печать</button> чтобы напечатать
+        </form>
         <a href="#0" class="close cd-img-replace">Close</a>
     </div>
 </div>
