--- a/WEB_UI/Areas/IDSRWT/Views/Home/Report.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Report.cshtml
@@ -8,6 +8,7 @@
     <title>Ghbvth</title>
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css.map">
+    <link rel="stylesheet" type="text/css" href="~/Content/view/shared/print.css">
     <script src="~/Scripts/jquery-3.4.1.min.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/bootstrap.min.js"></script> <!-- Общая библиотека методов программы -->
 </head>
