--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -183,12 +183,55 @@ print  detali panel
 
 /*Окно отображения текста для печати*/
 
-.to_print {
-    margin-left:20px;
+
+.to_print{
+  font-family: sans-serif;
+  margin: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
 }
-/*.to_print h1{
-    fo
-}*/
+
+.to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+.to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.to_print h1, .h1 {
+  font-size: 2.5rem;
+}
+
+.to_print h2, .h2 {
+  font-size: 2rem;
+}
+
+.to_print h3, .h3 {
+  font-size: 1.75rem;
+}
+
+.to_print h4, .h4 {
+  font-size: 1.5rem;
+}
+
+.to_print h5, .h5 {
+  font-size: 1.25rem;
+}
+
+.to_print h6, .h6 {
+  font-size: 1rem;
+}
+
 
 /* -------------------------------- 
 
