delete vagon in arrival & print test

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -1073,7 +1073,7 @@
                 <div class="row mb-4">
                     <div class="col-sm-12 text-center"><h2 id="name_report"></h2></div>
                 </div>
-                <div id="context_report">
+                <div id="context_report" style="margin-left:20px">
                     <div class="row mb-4">
                         <div class="col-sm-2 text-right font-weight-bold">Поезд прибыл на станцию:</div>
                         <div class="col-sm-2 text-left">Восточная-Приемоотправочная</div>
