--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -1,4 +1,5 @@
 ﻿@import url("../../font-awesome/css/font-awesome.min.css");
+
 body {
 }
 /**/
@@ -71,7 +72,7 @@ div.dt-buttons a {
             z-index: 203;
         }
 
-        
+
 
 /* -------------------------------- 
 
@@ -184,53 +185,63 @@ print  detali panel
 /*Окно отображения текста для печати*/
 
 
-.to_print{
-  font-family: sans-serif;
-  margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
+.to_print {
+    font-family: sans-serif;
+    margin: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
 }
 
-.to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+    .to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6 {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+    }
+
+    .to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6,
+    .h1, .h2, .h3, .h4, .h5, .h6 {
+        margin-bottom: 0.5rem;
+        font-weight: 500;
+        line-height: 1.2;
+    }
+
+    .to_print h1, .h1 {
+        font-size: 2.5rem;
+    }
+
+    .to_print h2, .h2 {
+        font-size: 2rem;
+    }
+
+    .to_print h3, .h3 {
+        font-size: 1.75rem;
+    }
+
+    .to_print h4, .h4 {
+        font-size: 1.5rem;
+    }
+
+    .to_print h5, .h5 {
+        font-size: 1.25rem;
+    }
+
+    .to_print h6, .h6 {
+        font-size: 1rem;
+    }
+
+.print-table {
+    width: 200mm; /* Ширина таблицы */
+    border: 1px solid #000000;
 }
 
-.to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2;
-}
-
-.to_print h1, .h1 {
-  font-size: 2.5rem;
-}
-
-.to_print h2, .h2 {
-  font-size: 2rem;
-}
-
-.to_print h3, .h3 {
-  font-size: 1.75rem;
-}
-
-.to_print h4, .h4 {
-  font-size: 1.5rem;
-}
-
-.to_print h5, .h5 {
-  font-size: 1.25rem;
-}
-
-.to_print h6, .h6 {
-  font-size: 1rem;
-}
+    .print-table td, .print-table th {
+        border: 1px solid #000000;
+        font-size: 12px;
+    }
 
 
 /* -------------------------------- 
@@ -449,7 +460,7 @@ legend {
     font-size: inherit;
     line-height: inherit;
     border-bottom: none;
-    text-transform:uppercase;
+    text-transform: uppercase;
 }
 
 fieldset {
@@ -457,17 +468,18 @@ fieldset {
     padding: 10px;
     border-radius: 3px;
 }
-fieldset > fieldset {
-    border: 1px groove threedface;
-    padding: 5px;
-    border-radius: 3px;
-}
 
-    fieldset > fieldset legend {
-        text-transform:none;
+    fieldset > fieldset {
+        border: 1px groove threedface;
+        padding: 5px;
+        border-radius: 3px;
     }
 
-    /*fieldset > div > div > .col-form-label-sm {
+        fieldset > fieldset legend {
+            text-transform: none;
+        }
+
+/*fieldset > div > div > .col-form-label-sm {
         padding-top: calc(0.25rem + 1px);
         padding-bottom: calc(0.25rem + 1px);
         font-size: 0.75rem;
@@ -483,25 +495,25 @@ fieldset > fieldset {
     }*/
 
 .close-vagon {
-    display:block;
+    display: block;
 }
 
 .inp-epd {
-    border-color:blue;
+    border-color: blue;
     border-width: 2px;
 }
 
 .inp-manual {
-    border-color:red;
+    border-color: red;
     border-width: 2px;
 }
 
 .inp-uz {
-    border-color:orange;
+    border-color: orange;
     border-width: 2px;
 }
 
 .inp-auto {
-    border-color:darkviolet;
+    border-color: darkviolet;
     border-width: 2px;
 }
