--- a/WEB_UI/Content/view/shared/print.css
+++ b/WEB_UI/Content/view/shared/print.css
@@ -13,18 +13,30 @@ table {
     cellspacing:0;
 }*/
 
-html, body {
-    height: 297mm;
-    width: 210mm;
-    /*margin-left: auto;
-    margin-right: auto;*/
+html {
+    background-color: #d4d4d4;
 }
 
-*, *:before, *:after {
+/*.page {
+    margin: -10px;
+    background-color: #ffffff;
+}*/
+
+body {
+    /*height: 297mm;*/
+    width: 210mm;
+    /*padding: 10mm;*/
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    text-align: center;
+}
+
+/**, *:before, *:after {
     color: #000;
     box-shadow: none;
     text-shadow: none;
-}
+}*/
 
 html, body {
     font-size: 12px;
@@ -42,28 +54,67 @@ h3 {
     font-size: 14px;
 }
 
-.header, .footer, .banner {
+/*.header, .footer, .banner {
     display: none;
-}
+}*/
 
 
-.header {
+/*.header {
     background-color: #eee;
     color: #000;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
-}
+}*/
 
-article {
+/*article {
     page-break-inside: always;
+}*/
+
+  table { page-break-after:auto }
+  table tr    { page-break-inside:avoid; page-break-after:auto }
+  table td    { page-break-inside:avoid; page-break-after:auto }
+  table thead { display:table-header-group }
+  table tfoot { display:table-footer-group }
+
+
+.table-title {
+    max-width: 200mm;
+    /*width: 200mm;*/ /* Ширина таблицы */
+    /*border: 1px solid #000000;*/
 }
 
-table, .print-table {
-    width: 200mm; /* Ширина таблицы */
+    .table-title td, .table-title th {
+        /*border: 1px solid #000000;*/
+        font-size: 12px;
+    }
+
+    .table-title th {
+        text-align: right;
+        padding-right: 2px;
+    }
+
+    .table-title td {
+        text-align: left;
+        padding-left: 2px;
+    }
+
+.table-info {
+    max-width: 200mm;
+    /*width: 200mm;*/ /* Ширина таблицы */
     border: 1px solid #000000;
 }
 
-.print-table td, .print-table th {
-    border: 1px solid #000000;
-    font-size: 12px;
-}
+    .table-info td, .table-info th {
+        border: 1px solid #000000;
+        font-size: 10px;
+        text-align: center;
+        padding: 0 2px;
+    }
+
+        .table-info td.total {
+            font-weight:600;
+        }
+
+        .table-info th.total {
+            text-align:right;
+        }
