fix bag report & add report comm

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -71,7 +71,7 @@
                     </button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#" id="report_fst">Натурная ведомость поезда</a>
-                        <a class="dropdown-item" href="#">Натурная ведомость коммерческого осмотра</a>
+                        <a class="dropdown-item" href="#" id="report_fsci">Натурная ведомость коммерческого осмотра</a>
                         <a class="dropdown-item" href="#">Отчет с данными о перевеске</a>
                         <a class="dropdown-item" href="#">Отчет о приеме груза</a>
                         <a class="dropdown-item" href="#">Заявка на выдачу с проверкой груза КР Главный</a>
