--- a/WEB_UI/Content/view/shared/print.css
+++ b/WEB_UI/Content/view/shared/print.css
@@ -85,7 +85,7 @@ h3 {
 
     .table-title td, .table-title th {
         /*border: 1px solid #000000;*/
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .table-title th {
@@ -102,11 +102,12 @@ h3 {
     max-width: 200mm;
     /*width: 200mm;*/ /* Ширина таблицы */
     border: 1px solid #000000;
+    border-collapse: collapse; /* Отображать только одинарные линии */
 }
 
     .table-info td, .table-info th {
         border: 1px solid #000000;
-        font-size: 10px;
+        font-size: 9px;
         text-align: center;
         padding: 0 2px;
     }
