--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -545,7 +545,7 @@
                                             </div>
                                             <div class="col-md-7 mb-1 text-left">
                                                 <label for="card_vag_limiting_loading" class="col-form-label">@IDSRWTResource.title_limiting_loading:</label>
-                                                <input type="number" class="form-control inp-auto" id="card_vag_limiting_loading" name="card_vag_limiting_loading" title="Автоматически берется из справочника 'Карточка вагона' -> Ограничение погрузки" data-mode="view-global" data-edit="" data-form="transceiver">
+                                                <input type="text" class="form-control inp-auto" id="card_vag_limiting_loading" name="card_vag_limiting_loading" title="Автоматически берется из справочника 'Карточка вагона' -> Ограничение погрузки" data-mode="view-global" data-edit="" data-form="transceiver">
                                                 <div class="invalid-feedback">
                                                 </div>
                                             </div>
