--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" class="no-js">
 <head>
     <meta charset="utf-8">
@@ -44,7 +43,7 @@
                         <ul class="is-hidden">
                             <li class="go-back"><a href="#0">Справочники ИДС</a></li>
                             <li class="see-all"><a href="#">Вагоны</a></li>
-                            <li><a href="#">Карточка вагона</a></li>
+                            <li><a href='@Url.Action("Cars", "Home", new { Area = "Directory" })'>Карточка вагона</a></li>
                             <li><a href="#">Страны</a></li>
                             <li><a href="#">Род вагона</a></li>
                             <li><a href="#">Тип вагона</a></li>
