--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -6,6 +6,12 @@
 @section styles {
     @Styles.Render("~/DataTables/css")
     <link rel="stylesheet" type="text/css" href="~/Content/view/directory/home.css">
+
+    @*<style>
+            table.dataTable tbody th, table.dataTable tbody td {
+                white-space: nowrap;
+            }
+        </style>*@
 }
 
 @section scripts {
@@ -23,83 +29,83 @@
 
 <input id="username" type="hidden" value="@User.Identity.Name" />
 
-<div class="container-fluid">
-    <div class="card border-primary mt-3">
-        <!-- Шапка -->
-        <div class="card-header bg-warning text-white">
-            <button class="btn btn-link text-light text-uppercase" data-toggle="collapse" data-target="#demo">Найти вагоны</button><span id="type-search" class="badge badge-primary"></span>
-        </div>
-        <!-- Текстовый контент -->
-        <div class="card-body collapse" id="demo">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#cars-warning">Требующие правки</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#cars-search-num">По номеру</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#cars-search-operator">По оператору</a>
-                </li>
-            </ul>
-            <div class="tab-content p-3">
-                <div class="tab-pane fade show active" id="cars-warning">
-                    <div class="row mt-2">
-                        <div class="col-xl-10">
-                            <p>
-                                Найти вагоны в справочнике, по которым требуется вмешательство оператора в уточнении характеристик (Вагоны, зашедшие в первый раз, вагоны по которым изменился оператор по данным УЗ)
-                            </p>
-                        </div>
-                        <div class="col-xl-2">
-                            <button type="button" class="btn btn-primary">Поиск</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="cars-search-num">
-                    <div class="form-row">
-                        <div class="col-xl-12">
-                            <p>Найти вагон(ы) в справочнике по номеру вагона, если вагона нет в справочнике вагон создается по данным КИС и УЗ.</p>
-                        </div>
-                    </div>
-                    <div class="form-row mt-2">
-                        <div class="col-xl-10">
-                            <textarea class="form-control" id="num_cars" name="num_cars" rows="2" style="font-size:inherit"></textarea>
-                        </div>
-                        <div class="col-xl-2">
-                            <button type="button" class="btn btn-primary">Поиск</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="cars-search-operator">
-                    <div class="form-row">
-                        <div class="col-xl-12">
-                            <p>Найти вагон(ы) в справочнике по оператору.</p>
-                        </div>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="wagon-operator" class="col-xl-5 col-form-label">Оператор:</label>
-                        <div class="col-xl-5">
-                            <select class="form-control" id="wagon-operator"></select>
-                        </div>
-                        <div class="col-xl-2">
-                            <button type="button" class="btn btn-primary">Поиск</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div><!-- Конец карточки -->
 
-</div>
-<div class="alert" id="main-alert"></div>
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="alert mt-3" id="main-alert"></div>
+    <div class="row mt-3">
         <div class="col-xl-12">
-            <div class="card border-dark mb-3">
+            <div class="card border-warning mt-3">
+                <!-- Шапка -->
+                <div class="card-header bg-warning text-white">
+                    <button class="btn btn-link text-light text-uppercase" data-toggle="collapse" data-target="#demo">Найти вагоны</button><span id="type-search" class="badge badge-primary"></span>
+                </div>
+                <!-- Текстовый контент -->
+                <div class="card-body collapse" id="demo">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#cars-warning">Требующие правки</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#cars-search-num">По номеру</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#cars-search-operator">По оператору</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content p-3">
+                        <div class="tab-pane fade show active" id="cars-warning">
+                            <div class="row mt-2">
+                                <div class="col-xl-10">
+                                    <p>
+                                        Найти вагоны в справочнике, по которым требуется вмешательство оператора в уточнении характеристик (Вагоны, зашедшие в первый раз, вагоны по которым изменился оператор по данным УЗ)
+                                    </p>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_warning">Поиск</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="cars-search-num">
+                            <div class="form-row">
+                                <div class="col-xl-12">
+                                    <p>Найти вагон(ы) в справочнике по номеру вагона, если вагона нет в справочнике вагон создается по данным КИС и УЗ.</p>
+                                </div>
+                            </div>
+                            <div class="form-row mt-2">
+                                <div class="col-xl-10">
+                                    <textarea class="form-control" id="num_cars" name="num_cars" rows="2" style="font-size:inherit"></textarea>
+                                </div>
+                                <div class="col-xl-2">
+                                    <button type="button" class="btn btn-primary" id="cars_search_num">Поиск</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="cars-search-operator">
+                            <div class="form-row">
+                                <div class="col-xl-12">
+                                    <p>Найти вагон(ы) в справочнике по оператору.</p>
+                                </div>
+                            </div>
+                            <form class="form-inline">
+                                <div class="form-group mb-2">
+                                    <label for="wagon-operator" class="col-form-label">Оператор:</label>
+                                    <select class="form-control ml-3" id="wagon_operator" style="font-size:inherit"></select>
+                                </div>
+                                @*<button type="button" class="btn btn-primary mb-2 ml-3" id="cars_search_operator">Поиск</button>*@
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- Конец карточки -->
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-xl-12">
+            <div class="card border-dark">
                 <div class="card-header bg-secondary text-white text-uppercase">@DirectoryResource.cars_title</div>
                 <div class="card-body text-dark pl-3 pr-3">
-                    <table class="table table-striped table-bordered" id="table-directory" style="width:100%"></table>
+                    <table class="display table-bordered" id="table-directory" style="width:100%; table-layout: fixed"></table>
                 </div>
             </div>
         </div>
